clueslib/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> kwl
Rule 1     kwl -> kwv
Rule 2     kwl -> kwv ;
Rule 3     kwl -> kwv ; kwl
Rule 4     kwl -> mexp
Rule 5     kwl -> mexp ;
Rule 6     kwv -> VAR EQU mexp
Rule 7     mexp -> NOT mexp
Rule 8     mexp -> LPARENT mexp RPARENT
Rule 9     mexp -> mexp + mexp
Rule 10    mexp -> mexp - mexp
Rule 11    mexp -> mexp2
Rule 12    mexp2 -> mexp * mexp
Rule 13    mexp2 -> mexp / mexp
Rule 14    mexp2 -> mexp AND mexp
Rule 15    mexp2 -> mexp OR mexp
Rule 16    mexp2 -> mexp GE mexp
Rule 17    mexp2 -> mexp LE mexp
Rule 18    mexp2 -> mexp LT mexp
Rule 19    mexp2 -> mexp GT mexp
Rule 20    mexp2 -> mexp NE mexp
Rule 21    mexp2 -> mexp EQ mexp
Rule 22    mexp2 -> mexp IN lexp
Rule 23    mexp2 -> mexp IN VAR
Rule 24    mexp2 -> mexp SUBSET lexp
Rule 25    mexp2 -> mexp SUBSET VAR
Rule 26    mexp2 -> term
Rule 27    lexp -> SQ_LPARENT l SQ_RPARENT
Rule 28    l -> <empty>
Rule 29    l -> mexp
Rule 30    l -> mexp COMMA l
Rule 31    term -> VAR
Rule 32    term -> - VAR
Rule 33    term -> TRUE
Rule 34    term -> FALSE
Rule 35    term -> NUM
Rule 36    term -> - NUM
Rule 37    term -> lexp
Rule 38    term -> STRING

Terminals, with rules where they appear

*                    : 12
+                    : 9
-                    : 10 32 36
/                    : 13
;                    : 2 3 5
AND                  : 14
COMMA                : 30
EQ                   : 21
EQU                  : 6
FALSE                : 34
GE                   : 16
GT                   : 19
IN                   : 22 23
LE                   : 17
LPARENT              : 8
LT                   : 18
NE                   : 20
NOT                  : 7
NUM                  : 35 36
OR                   : 15
RPARENT              : 8
SQ_LPARENT           : 27
SQ_RPARENT           : 27
STRING               : 38
SUBSET               : 24 25
TRUE                 : 33
VAR                  : 6 23 25 31 32
error                : 

Nonterminals, with rules where they appear

kwl                  : 3 0
kwv                  : 1 2 3
l                    : 27 30
lexp                 : 22 24 37
mexp                 : 4 5 6 7 8 9 9 10 10 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23 24 25 29 30
mexp2                : 11
term                 : 26

Parsing method: LALR

state 0

    (0) S' -> . kwl
    (1) kwl -> . kwv
    (2) kwl -> . kwv ;
    (3) kwl -> . kwv ; kwl
    (4) kwl -> . mexp
    (5) kwl -> . mexp ;
    (6) kwv -> . VAR EQU mexp
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    VAR             shift and go to state 11
    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    term                           shift and go to state 12
    lexp                           shift and go to state 7
    mexp2                          shift and go to state 1
    kwl                            shift and go to state 3
    mexp                           shift and go to state 14
    kwv                            shift and go to state 4

state 1

    (11) mexp -> mexp2 .

    COMMA           reduce using rule 11 (mexp -> mexp2 .)
    +               reduce using rule 11 (mexp -> mexp2 .)
    -               reduce using rule 11 (mexp -> mexp2 .)
    *               reduce using rule 11 (mexp -> mexp2 .)
    /               reduce using rule 11 (mexp -> mexp2 .)
    AND             reduce using rule 11 (mexp -> mexp2 .)
    OR              reduce using rule 11 (mexp -> mexp2 .)
    GE              reduce using rule 11 (mexp -> mexp2 .)
    LE              reduce using rule 11 (mexp -> mexp2 .)
    LT              reduce using rule 11 (mexp -> mexp2 .)
    GT              reduce using rule 11 (mexp -> mexp2 .)
    NE              reduce using rule 11 (mexp -> mexp2 .)
    EQ              reduce using rule 11 (mexp -> mexp2 .)
    IN              reduce using rule 11 (mexp -> mexp2 .)
    SUBSET          reduce using rule 11 (mexp -> mexp2 .)
    SQ_RPARENT      reduce using rule 11 (mexp -> mexp2 .)
    ;               reduce using rule 11 (mexp -> mexp2 .)
    $end            reduce using rule 11 (mexp -> mexp2 .)
    RPARENT         reduce using rule 11 (mexp -> mexp2 .)


state 2

    (27) lexp -> SQ_LPARENT . l SQ_RPARENT
    (28) l -> .
    (29) l -> . mexp
    (30) l -> . mexp COMMA l
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    SQ_RPARENT      reduce using rule 28 (l -> .)
    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    VAR             shift and go to state 16
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    mexp2                          shift and go to state 1
    term                           shift and go to state 12
    l                              shift and go to state 17
    mexp                           shift and go to state 18
    lexp                           shift and go to state 7

state 3

    (0) S' -> kwl .



state 4

    (1) kwl -> kwv .
    (2) kwl -> kwv . ;
    (3) kwl -> kwv . ; kwl

    $end            reduce using rule 1 (kwl -> kwv .)
    ;               shift and go to state 19


state 5

    (33) term -> TRUE .

    +               reduce using rule 33 (term -> TRUE .)
    -               reduce using rule 33 (term -> TRUE .)
    *               reduce using rule 33 (term -> TRUE .)
    /               reduce using rule 33 (term -> TRUE .)
    AND             reduce using rule 33 (term -> TRUE .)
    OR              reduce using rule 33 (term -> TRUE .)
    GE              reduce using rule 33 (term -> TRUE .)
    LE              reduce using rule 33 (term -> TRUE .)
    LT              reduce using rule 33 (term -> TRUE .)
    GT              reduce using rule 33 (term -> TRUE .)
    NE              reduce using rule 33 (term -> TRUE .)
    EQ              reduce using rule 33 (term -> TRUE .)
    IN              reduce using rule 33 (term -> TRUE .)
    SUBSET          reduce using rule 33 (term -> TRUE .)
    ;               reduce using rule 33 (term -> TRUE .)
    $end            reduce using rule 33 (term -> TRUE .)
    COMMA           reduce using rule 33 (term -> TRUE .)
    SQ_RPARENT      reduce using rule 33 (term -> TRUE .)
    RPARENT         reduce using rule 33 (term -> TRUE .)


state 6

    (8) mexp -> LPARENT . mexp RPARENT
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    VAR             shift and go to state 16
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    mexp2                          shift and go to state 1
    term                           shift and go to state 12
    lexp                           shift and go to state 7
    mexp                           shift and go to state 20

state 7

    (37) term -> lexp .

    +               reduce using rule 37 (term -> lexp .)
    -               reduce using rule 37 (term -> lexp .)
    *               reduce using rule 37 (term -> lexp .)
    /               reduce using rule 37 (term -> lexp .)
    AND             reduce using rule 37 (term -> lexp .)
    OR              reduce using rule 37 (term -> lexp .)
    GE              reduce using rule 37 (term -> lexp .)
    LE              reduce using rule 37 (term -> lexp .)
    LT              reduce using rule 37 (term -> lexp .)
    GT              reduce using rule 37 (term -> lexp .)
    NE              reduce using rule 37 (term -> lexp .)
    EQ              reduce using rule 37 (term -> lexp .)
    IN              reduce using rule 37 (term -> lexp .)
    SUBSET          reduce using rule 37 (term -> lexp .)
    ;               reduce using rule 37 (term -> lexp .)
    $end            reduce using rule 37 (term -> lexp .)
    COMMA           reduce using rule 37 (term -> lexp .)
    SQ_RPARENT      reduce using rule 37 (term -> lexp .)
    RPARENT         reduce using rule 37 (term -> lexp .)


state 8

    (32) term -> - . VAR
    (36) term -> - . NUM

    VAR             shift and go to state 21
    NUM             shift and go to state 22


state 9

    (35) term -> NUM .

    +               reduce using rule 35 (term -> NUM .)
    -               reduce using rule 35 (term -> NUM .)
    *               reduce using rule 35 (term -> NUM .)
    /               reduce using rule 35 (term -> NUM .)
    AND             reduce using rule 35 (term -> NUM .)
    OR              reduce using rule 35 (term -> NUM .)
    GE              reduce using rule 35 (term -> NUM .)
    LE              reduce using rule 35 (term -> NUM .)
    LT              reduce using rule 35 (term -> NUM .)
    GT              reduce using rule 35 (term -> NUM .)
    NE              reduce using rule 35 (term -> NUM .)
    EQ              reduce using rule 35 (term -> NUM .)
    IN              reduce using rule 35 (term -> NUM .)
    SUBSET          reduce using rule 35 (term -> NUM .)
    ;               reduce using rule 35 (term -> NUM .)
    $end            reduce using rule 35 (term -> NUM .)
    COMMA           reduce using rule 35 (term -> NUM .)
    SQ_RPARENT      reduce using rule 35 (term -> NUM .)
    RPARENT         reduce using rule 35 (term -> NUM .)


state 10

    (38) term -> STRING .

    +               reduce using rule 38 (term -> STRING .)
    -               reduce using rule 38 (term -> STRING .)
    *               reduce using rule 38 (term -> STRING .)
    /               reduce using rule 38 (term -> STRING .)
    AND             reduce using rule 38 (term -> STRING .)
    OR              reduce using rule 38 (term -> STRING .)
    GE              reduce using rule 38 (term -> STRING .)
    LE              reduce using rule 38 (term -> STRING .)
    LT              reduce using rule 38 (term -> STRING .)
    GT              reduce using rule 38 (term -> STRING .)
    NE              reduce using rule 38 (term -> STRING .)
    EQ              reduce using rule 38 (term -> STRING .)
    IN              reduce using rule 38 (term -> STRING .)
    SUBSET          reduce using rule 38 (term -> STRING .)
    ;               reduce using rule 38 (term -> STRING .)
    $end            reduce using rule 38 (term -> STRING .)
    COMMA           reduce using rule 38 (term -> STRING .)
    SQ_RPARENT      reduce using rule 38 (term -> STRING .)
    RPARENT         reduce using rule 38 (term -> STRING .)


state 11

    (6) kwv -> VAR . EQU mexp
    (31) term -> VAR .

    EQU             shift and go to state 23
    ;               reduce using rule 31 (term -> VAR .)
    +               reduce using rule 31 (term -> VAR .)
    -               reduce using rule 31 (term -> VAR .)
    *               reduce using rule 31 (term -> VAR .)
    /               reduce using rule 31 (term -> VAR .)
    AND             reduce using rule 31 (term -> VAR .)
    OR              reduce using rule 31 (term -> VAR .)
    GE              reduce using rule 31 (term -> VAR .)
    LE              reduce using rule 31 (term -> VAR .)
    LT              reduce using rule 31 (term -> VAR .)
    GT              reduce using rule 31 (term -> VAR .)
    NE              reduce using rule 31 (term -> VAR .)
    EQ              reduce using rule 31 (term -> VAR .)
    IN              reduce using rule 31 (term -> VAR .)
    SUBSET          reduce using rule 31 (term -> VAR .)
    $end            reduce using rule 31 (term -> VAR .)


state 12

    (26) mexp2 -> term .

    RPARENT         reduce using rule 26 (mexp2 -> term .)
    +               reduce using rule 26 (mexp2 -> term .)
    -               reduce using rule 26 (mexp2 -> term .)
    *               reduce using rule 26 (mexp2 -> term .)
    /               reduce using rule 26 (mexp2 -> term .)
    AND             reduce using rule 26 (mexp2 -> term .)
    OR              reduce using rule 26 (mexp2 -> term .)
    GE              reduce using rule 26 (mexp2 -> term .)
    LE              reduce using rule 26 (mexp2 -> term .)
    LT              reduce using rule 26 (mexp2 -> term .)
    GT              reduce using rule 26 (mexp2 -> term .)
    NE              reduce using rule 26 (mexp2 -> term .)
    EQ              reduce using rule 26 (mexp2 -> term .)
    IN              reduce using rule 26 (mexp2 -> term .)
    SUBSET          reduce using rule 26 (mexp2 -> term .)
    ;               reduce using rule 26 (mexp2 -> term .)
    $end            reduce using rule 26 (mexp2 -> term .)
    COMMA           reduce using rule 26 (mexp2 -> term .)
    SQ_RPARENT      reduce using rule 26 (mexp2 -> term .)


state 13

    (34) term -> FALSE .

    +               reduce using rule 34 (term -> FALSE .)
    -               reduce using rule 34 (term -> FALSE .)
    *               reduce using rule 34 (term -> FALSE .)
    /               reduce using rule 34 (term -> FALSE .)
    AND             reduce using rule 34 (term -> FALSE .)
    OR              reduce using rule 34 (term -> FALSE .)
    GE              reduce using rule 34 (term -> FALSE .)
    LE              reduce using rule 34 (term -> FALSE .)
    LT              reduce using rule 34 (term -> FALSE .)
    GT              reduce using rule 34 (term -> FALSE .)
    NE              reduce using rule 34 (term -> FALSE .)
    EQ              reduce using rule 34 (term -> FALSE .)
    IN              reduce using rule 34 (term -> FALSE .)
    SUBSET          reduce using rule 34 (term -> FALSE .)
    ;               reduce using rule 34 (term -> FALSE .)
    $end            reduce using rule 34 (term -> FALSE .)
    COMMA           reduce using rule 34 (term -> FALSE .)
    SQ_RPARENT      reduce using rule 34 (term -> FALSE .)
    RPARENT         reduce using rule 34 (term -> FALSE .)


state 14

    (4) kwl -> mexp .
    (5) kwl -> mexp . ;
    (9) mexp -> mexp . + mexp
    (10) mexp -> mexp . - mexp
    (12) mexp2 -> mexp . * mexp
    (13) mexp2 -> mexp . / mexp
    (14) mexp2 -> mexp . AND mexp
    (15) mexp2 -> mexp . OR mexp
    (16) mexp2 -> mexp . GE mexp
    (17) mexp2 -> mexp . LE mexp
    (18) mexp2 -> mexp . LT mexp
    (19) mexp2 -> mexp . GT mexp
    (20) mexp2 -> mexp . NE mexp
    (21) mexp2 -> mexp . EQ mexp
    (22) mexp2 -> mexp . IN lexp
    (23) mexp2 -> mexp . IN VAR
    (24) mexp2 -> mexp . SUBSET lexp
    (25) mexp2 -> mexp . SUBSET VAR

    $end            reduce using rule 4 (kwl -> mexp .)
    ;               shift and go to state 36
    +               shift and go to state 27
    -               shift and go to state 29
    *               shift and go to state 28
    /               shift and go to state 34
    AND             shift and go to state 24
    OR              shift and go to state 38
    GE              shift and go to state 32
    LE              shift and go to state 26
    LT              shift and go to state 30
    GT              shift and go to state 33
    NE              shift and go to state 31
    EQ              shift and go to state 37
    IN              shift and go to state 35
    SUBSET          shift and go to state 25


state 15

    (7) mexp -> NOT . mexp
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    VAR             shift and go to state 16
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    mexp2                          shift and go to state 1
    term                           shift and go to state 12
    lexp                           shift and go to state 7
    mexp                           shift and go to state 39

state 16

    (31) term -> VAR .

    +               reduce using rule 31 (term -> VAR .)
    -               reduce using rule 31 (term -> VAR .)
    *               reduce using rule 31 (term -> VAR .)
    /               reduce using rule 31 (term -> VAR .)
    AND             reduce using rule 31 (term -> VAR .)
    OR              reduce using rule 31 (term -> VAR .)
    GE              reduce using rule 31 (term -> VAR .)
    LE              reduce using rule 31 (term -> VAR .)
    LT              reduce using rule 31 (term -> VAR .)
    GT              reduce using rule 31 (term -> VAR .)
    NE              reduce using rule 31 (term -> VAR .)
    EQ              reduce using rule 31 (term -> VAR .)
    IN              reduce using rule 31 (term -> VAR .)
    SUBSET          reduce using rule 31 (term -> VAR .)
    ;               reduce using rule 31 (term -> VAR .)
    $end            reduce using rule 31 (term -> VAR .)
    COMMA           reduce using rule 31 (term -> VAR .)
    SQ_RPARENT      reduce using rule 31 (term -> VAR .)
    RPARENT         reduce using rule 31 (term -> VAR .)


state 17

    (27) lexp -> SQ_LPARENT l . SQ_RPARENT

    SQ_RPARENT      shift and go to state 40


state 18

    (29) l -> mexp .
    (30) l -> mexp . COMMA l
    (9) mexp -> mexp . + mexp
    (10) mexp -> mexp . - mexp
    (12) mexp2 -> mexp . * mexp
    (13) mexp2 -> mexp . / mexp
    (14) mexp2 -> mexp . AND mexp
    (15) mexp2 -> mexp . OR mexp
    (16) mexp2 -> mexp . GE mexp
    (17) mexp2 -> mexp . LE mexp
    (18) mexp2 -> mexp . LT mexp
    (19) mexp2 -> mexp . GT mexp
    (20) mexp2 -> mexp . NE mexp
    (21) mexp2 -> mexp . EQ mexp
    (22) mexp2 -> mexp . IN lexp
    (23) mexp2 -> mexp . IN VAR
    (24) mexp2 -> mexp . SUBSET lexp
    (25) mexp2 -> mexp . SUBSET VAR

    SQ_RPARENT      reduce using rule 29 (l -> mexp .)
    COMMA           shift and go to state 41
    +               shift and go to state 27
    -               shift and go to state 29
    *               shift and go to state 28
    /               shift and go to state 34
    AND             shift and go to state 24
    OR              shift and go to state 38
    GE              shift and go to state 32
    LE              shift and go to state 26
    LT              shift and go to state 30
    GT              shift and go to state 33
    NE              shift and go to state 31
    EQ              shift and go to state 37
    IN              shift and go to state 35
    SUBSET          shift and go to state 25


state 19

    (2) kwl -> kwv ; .
    (3) kwl -> kwv ; . kwl
    (1) kwl -> . kwv
    (2) kwl -> . kwv ;
    (3) kwl -> . kwv ; kwl
    (4) kwl -> . mexp
    (5) kwl -> . mexp ;
    (6) kwv -> . VAR EQU mexp
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    $end            reduce using rule 2 (kwl -> kwv ; .)
    VAR             shift and go to state 11
    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    term                           shift and go to state 12
    lexp                           shift and go to state 7
    mexp2                          shift and go to state 1
    kwl                            shift and go to state 42
    mexp                           shift and go to state 14
    kwv                            shift and go to state 4

state 20

    (8) mexp -> LPARENT mexp . RPARENT
    (9) mexp -> mexp . + mexp
    (10) mexp -> mexp . - mexp
    (12) mexp2 -> mexp . * mexp
    (13) mexp2 -> mexp . / mexp
    (14) mexp2 -> mexp . AND mexp
    (15) mexp2 -> mexp . OR mexp
    (16) mexp2 -> mexp . GE mexp
    (17) mexp2 -> mexp . LE mexp
    (18) mexp2 -> mexp . LT mexp
    (19) mexp2 -> mexp . GT mexp
    (20) mexp2 -> mexp . NE mexp
    (21) mexp2 -> mexp . EQ mexp
    (22) mexp2 -> mexp . IN lexp
    (23) mexp2 -> mexp . IN VAR
    (24) mexp2 -> mexp . SUBSET lexp
    (25) mexp2 -> mexp . SUBSET VAR

    RPARENT         shift and go to state 43
    +               shift and go to state 27
    -               shift and go to state 29
    *               shift and go to state 28
    /               shift and go to state 34
    AND             shift and go to state 24
    OR              shift and go to state 38
    GE              shift and go to state 32
    LE              shift and go to state 26
    LT              shift and go to state 30
    GT              shift and go to state 33
    NE              shift and go to state 31
    EQ              shift and go to state 37
    IN              shift and go to state 35
    SUBSET          shift and go to state 25


state 21

    (32) term -> - VAR .

    +               reduce using rule 32 (term -> - VAR .)
    -               reduce using rule 32 (term -> - VAR .)
    *               reduce using rule 32 (term -> - VAR .)
    /               reduce using rule 32 (term -> - VAR .)
    AND             reduce using rule 32 (term -> - VAR .)
    OR              reduce using rule 32 (term -> - VAR .)
    GE              reduce using rule 32 (term -> - VAR .)
    LE              reduce using rule 32 (term -> - VAR .)
    LT              reduce using rule 32 (term -> - VAR .)
    GT              reduce using rule 32 (term -> - VAR .)
    NE              reduce using rule 32 (term -> - VAR .)
    EQ              reduce using rule 32 (term -> - VAR .)
    IN              reduce using rule 32 (term -> - VAR .)
    SUBSET          reduce using rule 32 (term -> - VAR .)
    ;               reduce using rule 32 (term -> - VAR .)
    $end            reduce using rule 32 (term -> - VAR .)
    COMMA           reduce using rule 32 (term -> - VAR .)
    SQ_RPARENT      reduce using rule 32 (term -> - VAR .)
    RPARENT         reduce using rule 32 (term -> - VAR .)


state 22

    (36) term -> - NUM .

    +               reduce using rule 36 (term -> - NUM .)
    -               reduce using rule 36 (term -> - NUM .)
    *               reduce using rule 36 (term -> - NUM .)
    /               reduce using rule 36 (term -> - NUM .)
    AND             reduce using rule 36 (term -> - NUM .)
    OR              reduce using rule 36 (term -> - NUM .)
    GE              reduce using rule 36 (term -> - NUM .)
    LE              reduce using rule 36 (term -> - NUM .)
    LT              reduce using rule 36 (term -> - NUM .)
    GT              reduce using rule 36 (term -> - NUM .)
    NE              reduce using rule 36 (term -> - NUM .)
    EQ              reduce using rule 36 (term -> - NUM .)
    IN              reduce using rule 36 (term -> - NUM .)
    SUBSET          reduce using rule 36 (term -> - NUM .)
    ;               reduce using rule 36 (term -> - NUM .)
    $end            reduce using rule 36 (term -> - NUM .)
    COMMA           reduce using rule 36 (term -> - NUM .)
    SQ_RPARENT      reduce using rule 36 (term -> - NUM .)
    RPARENT         reduce using rule 36 (term -> - NUM .)


state 23

    (6) kwv -> VAR EQU . mexp
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    VAR             shift and go to state 16
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    mexp2                          shift and go to state 1
    term                           shift and go to state 12
    lexp                           shift and go to state 7
    mexp                           shift and go to state 44

state 24

    (14) mexp2 -> mexp AND . mexp
    (7) mexp -> . NOT mexp
    (8) mexp -> . LPARENT mexp RPARENT
    (9) mexp -> . mexp + mexp
    (10) mexp -> . mexp - mexp
    (11) mexp -> . mexp2
    (12) mexp2 -> . mexp * mexp
    (13) mexp2 -> . mexp / mexp
    (14) mexp2 -> . mexp AND mexp
    (15) mexp2 -> . mexp OR mexp
    (16) mexp2 -> . mexp GE mexp
    (17) mexp2 -> . mexp LE mexp
    (18) mexp2 -> . mexp LT mexp
    (19) mexp2 -> . mexp GT mexp
    (20) mexp2 -> . mexp NE mexp
    (21) mexp2 -> . mexp EQ mexp
    (22) mexp2 -> . mexp IN lexp
    (23) mexp2 -> . mexp IN VAR
    (24) mexp2 -> . mexp SUBSET lexp
    (25) mexp2 -> . mexp SUBSET VAR
    (26) mexp2 -> . term
    (31) term -> . VAR
    (32) term -> . - VAR
    (33) term -> . TRUE
    (34) term -> . FALSE
    (35) term -> . NUM
    (36) term -> . - NUM
    (37) term -> . lexp
    (38) term -> . STRING
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    NOT             shift and go to state 15
    LPARENT         shift and go to state 6
    VAR             shift and go to state 16
    -               shift and go to state 8
    TRUE            shift and go to state 5
    FALSE           shift and go to state 13
    NUM             shift and go to state 9
    STRING          shift and go to state 10
    SQ_LPARENT      shift and go to state 2

    mexp2                          shift and go to state 1
    term                           shift and go to state 12
    lexp                           shift and go to state 7
    mexp                           shift and go to state 45

state 25

    (24) mexp2 -> mexp SUBSET . lexp
    (25) mexp2 -> mexp SUBSET . VAR
    (27) lexp -> . SQ_LPARENT l SQ_RPARENT

    VAR             shift and go to state 47
    SQ_LPARENT      shift and go to state 2

    lexp                           shift and go to state 46

state 26
